# ecsact_rt_entt

./: .bazelignore  .bazelrc  .clang-tidy  .editorconfig  .gitignore  BUILD.bazel  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE  WORKSPACE.bazel  build_recipe.yml  build_test.cc  renovate.json
.github/workflows/: build.yml  ci-windows.bazelrc  ci.bazelrc  ci.yml  main.yml  mq.yml  pr.yml
bazel/: common.bazelrc  copts.bzl
ecsact/entt/: assoc.hh  entity.hh  error_check.hh  event_markers.hh  execution.hh  registry_util.hh  runtime.hh  stream_registries.cc  stream_registries.hh  system_view.hh  trivial_system_impl.hh
ecsact/entt/detail/: allocator.hh  apply_component_stream_data.hh  apply_pending.hh  assoc.hh  assoc_fields_hash.hh  bytes.hh  codegen_error.hh  entt_util.hh  execution_events_collector.hh  globals.hh  hash.hh  id_map.hh  indexed_storage.hh  internal_lifecycle.hh  internal_markers.hh  meta_util.hh  mp11_util.hh  registry.hh  registry_info.hh  storage.hh  system_execution_context.hh
ecsact/entt/wrapper/: core.hh  dynamic.hh
ecsact_entt_view_codegen/: BUILD.bazel  ecsact_entt_view_codegen.cc  ecsact_entt_view_codegen.hh  ecsact_entt_view_codegen_cli.cc  ecsact_entt_view_codegen_plugin.cc
example/: BUILD.bazel  example.ecsact
rt_entt_codegen/: BUILD.bazel  rt_entt_codegen.cc
rt_entt_codegen/core/: BUILD.bazel  apply_streaming_data.cc  assoc_fields_hash.cc  assoc_globals.cc  check_error.cc  check_error_template_specializations.cc  copy_components.cc  core.hh  create_registry.cc  entity_matches.cc  events.cc  execute_systems.cc  execution_options.cc  hash_registry.cc  init_registry_storage.cc  print_sys_exec.cc  sorting_components.cc  system_markers.cc  system_notify.cc  update_beforechange.cc  update_indexed_storage.cc
rt_entt_codegen/core/sys_exec/: BUILD.bazel  sys_exec.cc  sys_exec.hh
rt_entt_codegen/core/system_provider/: BUILD.bazel  system_ctx_functions.cc  system_ctx_functions.hh  system_provider.cc  system_provider.hh
rt_entt_codegen/core/system_provider/association/: association.cc  association.hh
rt_entt_codegen/core/system_provider/basic/: basic.cc  basic.hh
rt_entt_codegen/core/system_provider/lazy/: lazy.cc  lazy.hh
rt_entt_codegen/core/system_provider/notify/: notify.cc  notify.hh
rt_entt_codegen/core/system_provider/parallel/: parallel.cc  parallel.hh
rt_entt_codegen/shared/: BUILD.bazel  comps_with_caps.hh  ecsact_entt_details.cc  ecsact_entt_details.hh  parallel.cc  parallel.hh  sorting.cc  sorting.hh  system_util.cc  system_util.hh  system_variant.hh  util.cc  util.hh
runtime/: BUILD.bazel  allocator.cc  common.template.cc  common.template.hh  core.template.cc  dynamic.template.cc  ecsact_rt_entt_core.cc  ecsact_rt_entt_dynamic.cc  entt_util.hh  event_markers.hh  hash.cc  index.bzl  meta.template.cc  registry_info.hh  runtime.hh  stream_registries.cc  system_execution_context.hh
runtime/test/: BUILD.bazel  debug_print_entt_views.cc  imported_pkg.ecsact  runtime_test.cc  runtime_test.ecsact
strict_registry/: BUILD.bazel  strict_registry.hh
strict_registry/test/: BUILD.bazel  strict_registry_test.cc  strict_registry_test.ecsact
test/: .bazelrc  BUILD.bazel  MODULE.bazel  clone_test.cc  codegen_test.nu  debug_print_entt_views.cc  hash_test.cc  imported_pkg.ecsact  macros.bzl  runtime_test.cc  runtime_test.ecsact  spawn.cc  spawn.hh  system_impls.cc  test_build_recipe.cc  test_recipe.yml
test/assoc/: BUILD.bazel  assoc.ecsact  assoc_test.cc  assoc_test.ecsact
test/parallel/: BUILD.bazel  entity_parallel_test.ecsact  parallel_test.cc  parallel_test.ecsact
tests/: BUILD.bazel  async_test.cc  async_test.ecsact
