load("@rules_cc//cc:defs.bzl", "cc_library")
load("//bazel:copts.bzl", "copts")

package(default_visibility = ["//visibility:public"])

filegroup(
    name = "headers",
    srcs = glob(["ecsact/**/*.hh"]),
)

cc_library(
    name = "lib",
    hdrs = glob(["ecsact/**/*.hh"]),
    copts = copts,
)

exports_files(["build_recipe.yml"])
