module(
    name = "ecsact_rt_entt",
    version = "0.3.2",
    compatibility_level = 3,
)

bazel_dep(name = "rules_cc", version = "0.0.9")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "rules_ecsact", version = "0.5.2")
bazel_dep(name = "ecsact_runtime", version = "0.6.6")
bazel_dep(name = "ecsact_lang_cpp", version = "0.4.4")
bazel_dep(name = "boost.mp11", version = "1.83.0.bzl.1")
bazel_dep(name = "entt", version = "3.12.2")
bazel_dep(name = "ecsact_codegen", version = "0.2.0")
bazel_dep(name = "ecsact_cli", version = "0.3.11")
bazel_dep(name = "xxhash", version = "0.8.2")

# local_path_override(
#     module_name = "ecsact_lang_cpp",
#     path = "../ecsact_lang_cpp",
# )

git_override(
	module_name = "ecsact_lang_cpp",
	remote = "git@github.com:ecsact-dev/ecsact_lang_cpp.git",
	commit = "1add2a6144776659b4f69f3b4132eefb0cb07a50",
)

# local_path_override(
#     module_name = "ecsact_runtime",
#     path = "../ecsact_runtime",
# )

git_override(
	module_name = "ecsact_runtime",
	remote = "git@github.com:ecsact-dev/ecsact_runtime.git",
	commit = "bb28aff1a1fbf214a0740f94ffddc35bf3f09043",
)

bazel_dep(name = "toolchains_llvm", version = "1.0.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)
git_override(
    module_name = "hedron_compile_commands",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "17.0.6")
use_repo(llvm, "llvm_toolchain")

register_toolchains(
    "@llvm_toolchain//:all",
    dev_dependency = True,
)
