module(
    name = "ecsact_rt_entt",
    version = "0.3.14",
    compatibility_level = 3,
)

bazel_dep(name = "rules_cc", version = "0.0.17")
bazel_dep(name = "bazel_skylib", version = "1.6.1")
bazel_dep(name = "rules_ecsact", version = "0.5.8")
bazel_dep(name = "ecsact_runtime", version = "0.7.1")
bazel_dep(name = "ecsact_lang_cpp", version = "0.4.10")
bazel_dep(name = "boost.mp11", version = "1.83.0.bzl.1")
bazel_dep(name = "entt", version = "3.12.2")
bazel_dep(name = "ecsact_codegen", version = "0.4.3")
bazel_dep(name = "ecsact_cli", version = "0.3.22")
bazel_dep(name = "xxhash", version = "0.8.2")
bazel_dep(name = "googletest", version = "1.14.0.bcr.1")
bazel_dep(name = "boost.dll", version = "1.83.0.bzl.2")
bazel_dep(name = "boost.process", version = "1.83.0.bzl.2")
bazel_dep(name = "tracy", version = "0.11.1.edr.2")
bazel_dep(name = "docopt.cpp", version = "0.6.2")

bazel_dep(name = "toolchains_llvm", version = "1.2.0", dev_dependency = True)
bazel_dep(name = "hedron_compile_commands", dev_dependency = True)

git_override(
    module_name = "hedron_compile_commands",
    commit = "204aa593e002cbd177d30f11f54cff3559110bb9",
    remote = "https://github.com/hedronvision/bazel-compile-commands-extractor.git",
)

ecsact = use_extension("@rules_ecsact//ecsact:extensions.bzl", "ecsact", dev_dependency = True)
ecsact.toolchain(use_ecsact_cli = True)
use_repo(ecsact, "ecsact_toolchain")

llvm = use_extension("@toolchains_llvm//toolchain/extensions:llvm.bzl", "llvm", dev_dependency = True)
llvm.toolchain(llvm_version = "19.1.0")
use_repo(llvm, "llvm_toolchain", "llvm_toolchain_llvm")

register_toolchains(
    "@llvm_toolchain//:all",
    "@ecsact_toolchain//:all",
    dev_dependency = True,
)
