load("@rules_cc//cc:defs.bzl", "cc_library")
load("@ecsact//:index.bzl", "ecsact_plugin")

package(default_visibility=["//visibility:public"])

cc_library(
    name = "lib",
    include_prefix = "ecsact/entt",
    hdrs = ["ecsact_entt_view_codegen.hh"],
    srcs = ["ecsact_entt_view_codegen.cc"],
    deps = [
        "@ecsact//parser2",
        "@boost//libs/config",
        "@ecsact//lang-support/cc",
        "@ecsact//generator/cpp_systems/util",
    ],
)

cc_binary(
    name = "ecsact_ecsact_entt_view_codegen",
    srcs = ["ecsact_entt_view_codegen_cli.cc"],
    deps = [
        ":lib",
        "@ecsact//generator-cli",
        "@ecsact//parser2",
    ],
)

alias(
    name = "cli",
    visibility = ["//visibility:public"],
    actual = ":ecsact_ecsact_entt_view_codegen",
)

cc_binary(
    name = "plugin",
    linkshared = True,
    srcs = ["ecsact_entt_view_codegen_plugin.cc"],
    deps = [
        ":lib",
        "@ecsact//parser2",
        "@ecsact//parser2/plugin",
        "@boost//libs/config",
    ],
)

ecsact_plugin(
    name = "ecsact_entt_view_codegen",
    plugin = ":plugin",
    output_extension = ".entt_view.hh",
)
