package(default_visibility = ["//visibility:public"])

_srcs = [
    "common.template.hh",
    "core.template.cc",
    "dynamic.template.cc",
    "runtime.template.cc",
    "system_execution_context.hh",
    "execution_events_collector.hh",
    "registry_info.hh",
    "event_markers.hh",
    "runtime.hh",
    "system_entt_view.hh",
]

exports_files(_srcs)

filegroup(
    name = "sources",
    srcs = _srcs,
)
