load("@rules_cc//cc:defs.bzl", "cc_library")

cc_library(
    name = "strict_registry",
    visibility = ["//visibility:public"],
    hdrs = ["strict_registry.hh"],
    include_prefix = "ecsact/entt",
    deps = [
        "@ecsact//lib:cc",
        "@com_github_skypjack_entt//:entt",
        "@boost//libs/mp11",
    ],
)
