load("@ecsact_rt_entt//bazel:copts.bzl", "copts")
load("@ecsact_rt_entt//runtime:index.bzl", "ecsact_entt_runtime")
load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_ecsact//ecsact:defs.bzl", "ecsact_codegen")

ecsact_codegen(
    name = "ecsact_cc_system_impl_srcs",
    srcs = [
        "imported_pkg.ecsact",
        "runtime_test.ecsact",
    ],
    output_directory = "_ecsact_cc_system_impl_srcs",
    plugins = [
        "@ecsact_lang_cpp//cpp_systems_source_codegen",
    ],
)

ecsact_entt_runtime(
    name = "runtime",
    srcs = [
        "imported_pkg.ecsact",
        "runtime_test.ecsact",
    ],
    ECSACT_ENTT_RUNTIME_PACKAGE = "::runtime_test::package",
    ECSACT_ENTT_RUNTIME_USER_HEADER = "runtime_test.ecsact.meta.hh",
    system_impls = [
        # "static",
        "dynamic",
    ],
)

cc_test(
    name = "test",
    srcs = [
        "runtime_test.cc",
        ":ecsact_cc_system_impl_srcs",
    ],
    args = ["--gtest_catch_exceptions=0"],
    copts = copts,
    deps = [
        ":runtime",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
