load("@ecsact_rt_entt//bazel:copts.bzl", "copts")
load("@ecsact_rt_entt//runtime:index.bzl", "ecsact_entt_runtime")
load("@hedron_compile_commands//:refresh_compile_commands.bzl", "refresh_compile_commands")
load("@rules_cc//cc:defs.bzl", "cc_test")
load("@rules_ecsact//ecsact:defs.bzl", "ecsact_codegen")

cc_test(
    name = "test_build_recipe",
    srcs = ["test_build_recipe.cc"],
    copts = copts,
    data = [
        "test_recipe.yml",
        "//:imported_pkg.ecsact",
        "//:runtime_test.ecsact",
        "@ecsact_cli",
        "@ecsact_rt_entt//rt_entt_codegen:ecsact_rt_entt_codegen",
    ],
    env = {
        "ECSACT_CLI": "$(rootpath @ecsact_cli)",
        "ECSACT_RECIPE_PATH": "$(roothpath test_recipe.yml)",
        "ECSACT_RUNTIME_FILE_PATH": "$(rootpath //:runtime_test.ecsact)",
        "ECSACT_IMPORTED_FILE_PATH": "$rootpath //:imported_pkg.ecsact)",
        "ECSACT_CODEGEN_PLUGIN_PATH": "$(rootpath @ecsact_rt_entt//rt_entt_codegen:ecsact_rt_entt_codegen",
    },
    deps = [
        "@boost.process",
        "@ecsact_cli",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)

refresh_compile_commands(
    name = "refresh_compile_commands",
    targets = {
        # "//:test_build_recipe": "",
        "//:test": "",
    },
)

ecsact_codegen(
    name = "ecsact_cc_system_impl_srcs",
    srcs = [
        "imported_pkg.ecsact",
        "runtime_test.ecsact",
    ],
    output_directory = "_ecsact_cc_system_impl_srcs",
    plugins = [
        "@ecsact_lang_cpp//cpp_systems_source_codegen",
    ],
)

ecsact_entt_runtime(
    name = "runtime",
    srcs = [
        "imported_pkg.ecsact",
        "runtime_test.ecsact",
    ],
    ECSACT_ENTT_RUNTIME_PACKAGE = "::runtime_test::package",
    ECSACT_ENTT_RUNTIME_USER_HEADER = "runtime_test.ecsact.meta.hh",
    system_impls = [
        # "static",
        "dynamic",
    ],
)

cc_test(
    name = "test",
    srcs = [
        "runtime_test.cc",
        ":ecsact_cc_system_impl_srcs",
    ],
    args = ["--gtest_catch_exceptions=0"],
    copts = copts,
    deps = [
        ":runtime",
        "@googletest//:gtest",
        "@googletest//:gtest_main",
    ],
)
